# change-refactoring-cpp-kata

./: .clang-format  .replit  CMakeLists.txt  README.md  change.h  test_change.cpp
